# sympheo

./: .gitignore  CHANGELOG.md  Cargo.toml  ISSUES.md  PROJECT_PLAN.md  README.md  SANITY.md  SPEC.md  SYMPHEO-1.md  WORKFLOW.md  clippy.toml  e2e-marker-1778445812.txt  e2e-marker-1778446944.txt  e2e-marker-1778447707.txt  e2e-marker-1778448202.txt  e2e-marker-1778448369.txt  e2e-marker-1778482906.txt  e2e-marker-1778521014.txt  e2e-marker-1778522375.txt  mise.toml  opencode.json  tarpaulin-report.html
.codebase-memory/: adr.md
.githooks/: commit-msg  pre-commit
.githooks/lib/: enforce-patterns.sh
.github/workflows/: ci.yml
.serena/: project.yml
docs/: 01-introduction.md  02-quickstart.md  03-core-concepts.md  04-configuration.md  05-workflow-states.md  06-skills.md  07-execution-modes.md  08-monitoring.md  09-troubleshooting.md  10-advanced-topics.md  audit-spec-v1.md  cli-config-audit.md  conformance-tests.md  dashboard.md  extensions.md  incident-2026-05-09.md  isolation.md
docs/qa/: cahier-de-recette.md
e2e/: README.md  requirements.txt  robot.args
e2e/libraries/: github_project.py
e2e/resources/: common.resource
scripts/: check-coverage.sh  e2e.sh  setup-branch-protection.sh
skills/doc/: SKILL.md
skills/review/: SKILL.md
skills/spec/: SKILL.md
skills/test/: SKILL.md
skills/todo/: SKILL.md
src/: error.rs  lib.rs  main.rs
src/agent/: mod.rs  parser.rs  process_registry.rs  runner.rs  tool_resolver.rs
src/config/: mod.rs  resolver.rs  typed.rs
src/git/: adapter.rs  local.rs  mod.rs
src/orchestrator/: mod.rs  retry.rs  state.rs  tick.rs
src/server/: mod.rs
src/skills/: loader.rs  mapper.rs  mod.rs
src/tracker/: github.rs  mod.rs  model.rs
src/workflow/: loader.rs  mod.rs  parser.rs  phase.rs  verifications.rs
src/workspace/: isolation.rs  manager.rs  mod.rs
templates/: dashboard.html
tests/: acp_backend.rs  cli_lifecycle.rs  daytona_backend_test.rs  e2e_mock.rs  github_tracker_test.rs  integration_test.rs  orchestrator_test.rs  real_integration.rs  server_test.rs  skills_test.rs
tests/e2e/: .gitignore  (+2 more)
(+48 files in other folders)
