[package]
name = "sympheo"
version = "0.1.0"
edition = "2021"
authors = ["Sympheo Contributors"]
description = "Orchestrates coding agents to get project work done"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
liquid = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.5", features = ["derive"] }
notify = "7.0"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
async-trait = "0.1"
lazy_static = "1.5"
libc = "0.2"
kstring = "2.0"
home = "0.5"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
reqwest = { version = "0.12", features = ["json"] }
