[package]
name = "sympheo"
version = "0.1.0"
edition = "2024"
authors = ["Sympheo Contributors"]
description = "Orchestrates coding agents to get project work done"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde-saphyr = "0.0.26"
reqwest = { version = "0.13", features = ["json"] }
liquid = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.6", features = ["derive"] }
notify = "8.2"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12"
async-trait = "0.1"
lazy_static = "1.5"
libc = "0.2"
kstring = "2.0"
home = "0.5"
agent-client-protocol = "=0.11.1"
agent-client-protocol-tokio = "=0.11.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
reqwest = { version = "0.13", features = ["json"] }
